--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,9 @@
-name: flujobottwitter
+name: Deploy Nonsense Generator Function
 
 on:
   push:
     branches:
-    - master
+    - main
 env:
   FUNC_APP_NAME: practica1redestwitter
 
@@ -33,5 +33,6 @@ jobs:
     - uses: Azure/functions-action@v1
       with:
         app-name: ${{ env.FUNC_APP_NAME }}
-        package: '.' 
+        package: '.'
+
 
